# live-bootcamp-project

./: compose.yml
.github/workflows/: prod.yml
app-service/: Cargo.toml
auth-service/: Cargo.toml
auth-service/.sqlx/: query-1bd30cf4aabadf39117f797b51196b1793961dc84bc4f22a39fa0794a252d3a2.json
auth-service/migrations/: 20251113163316_create_users_table.up.sql
auth-service/src/: lib.rs  main.rs
auth-service/src/app_state/: app_state.rs
auth-service/src/domain/: data_store.rs  email_client.rs  error.rs  mod.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mock_email_client.rs  mod.rs
auth-service/src/services/data_stores/: mod.rs  postgres_user_store.rs  redis_banned_token_stores.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs  tracing.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
